# creative

./: .gitignore  CMakeLists.txt  Makefile
include/: Camera.hpp  Map.hpp  Player.hpp  Space.hpp  event.hpp
include/entities/: Entities.hpp
include/shapes/: CenteredShape.hpp  RectangleShape.hpp  Shape.hpp
src/: Camera.cpp  Map.cpp  Player.cpp  Space.cpp  main.cpp  sfml-app
src/entities/: Entities.cpp
src/event/: event.cpp  event_loop.cpp
src/shapes/: CenteredShape.cpp  RectangleShape.cpp  Shape.cpp
